# DUDL

./: .gitignore  Info.plist  MANIFEST.in  README.md  __init__.py  publish.sh  pyproject.toml  setup.py
DUDL/: ColorPickerView.swift  CustomProgressView.swift  DUDLApp.swift  Errors.swift  HomeView.swift  Info.plist  JoinView.swift  Loader.swift  LobbyView.swift  NRC.swift  NewLobbyView.swift  Orientation.swift  PlayerProfileGridItemView.swift  PlayerProfileView.swift  PlayerRegistrationView.swift  RestController.swift  SettingsView.swift  StartView.swift  Utils.swift  WebStructs.swift
DUDL.xcodeproj/: project.pbxproj
DUDLTests/: DUDLTests.swift
DUDLUITests/: DUDLUITests.swift  DUDLUITestsLaunchTests.swift
dudl/: dudl_app.py  env.py
dudl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dudl_server/: .gitignore  __init__.py  bent-basis_70E4FCE1-E39B-41EC-9048-2EAE61609DB5_results.json  bent-basis_A8E56F6D-605A-492D-A8B1-D4EC172508B2_results.json  bent-basis_C91E77F3-C086-4AF9-8DFE-17F5722F001A_results.json  chunky-rottweiler_F98615AA-2183-420C-880F-C8ACE0537FCD_02171517-ccd8-4f44-bfe5-7413716898d8_results.json  chunky-rottweiler_F98615AA-2183-420C-880F-C8ACE0537FCD_30fdde19-5aed-4c4b-a7a2-a50e46e8a992_results.json  chunky-rottweiler_F98615AA-2183-420C-880F-C8ACE0537FCD_cbe485bb-a9f0-4061-8e26-b72dd4768faa_results.json  cloying-beat_70E4FCE1-E39B-41EC-9048-2EAE61609DB5_d1db35ef-24f0-4ae4-932a-3b180a4dbe2a_results.json  cloying-beat_A8E56F6D-605A-492D-A8B1-D4EC172508B2_97af5671-4719-4a0d-8598-8cb8b3fb4d69_results.json  pyproject.toml  setup.cfg  (+14 more)
(+81 files in other folders)
