[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['.']
include = ['dudl']

[project]
name = "dudl"
version = "0.1"
description = "DUDL App Backend Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==2.3.3",
    "flask-restx>=1.3.0",
    "Flask-API>=3.1",
    "flask-smorest>=0.42.3",
    "randomname>=0.2.1",
    "Werkzeug==2.3.8", # when > 2.3.8, conflicting import w/ flask
    "flasgger>=0.9.7.1",
    "pathlib>=1.0.1",
    "waitress>=2.1.2",
    "inflection>=0.5.1",
    "pymongo>=4.6.1",
    "itsdangerous>=2.1.2",
    "requests>=2.31.0",
    "ConfigArgParse>=1.7"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "numpy>=1.26.4"
]

[project.scripts]
start-dudl="src.dudl_app:start_server"

# [tool.coverage.run]
# omit = []

[tool.coverage.report]
fail_under = 70
